<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/statement_1"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/statement_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/a_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/a_x"
        app:layout_constraintEnd_toStartOf="@+id/a_y"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statement_1" />

    <TextView
        android:id="@+id/a_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_y"
        app:layout_constraintBaseline_toBaselineOf="@+id/a_x"
        app:layout_constraintEnd_toStartOf="@+id/a_z"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/a_x" />

    <TextView
        android:id="@+id/a_z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_z"
        app:layout_constraintBaseline_toBaselineOf="@+id/a_y"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/a_y" />

    <TextView
        android:id="@+id/statement_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/statement_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/statement_1"
        app:layout_constraintTop_toBottomOf="@+id/a_x" />

    <TextView
        android:id="@+id/shake_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/shake_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/statement_2"
        app:layout_constraintTop_toBottomOf="@+id/statement_2" />

    <EditText
        android:id="@+id/threshold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/threshold_default"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/shake_result"
        app:layout_constraintTop_toBottomOf="@+id/shake_result" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="press_start"
        android:text="@string/start_button"
        app:layout_constraintEnd_toStartOf="@+id/stop_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/threshold" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press_stop"
        android:text="@string/stop_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/start_button" />

    <TextView
        android:id="@+id/statement_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/statement_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/threshold"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />

    <TextView
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statement_3" />

    <Button
        android:id="@+id/start_button_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="press_start_b"
        android:text="@string/start_button_b"
        app:layout_constraintBaseline_toBaselineOf="@+id/stop_button_b"
        app:layout_constraintEnd_toStartOf="@+id/stop_button_b"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stop_button_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="press_stop_b"
        android:text="@string/stop_button_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/start_button_b"
        app:layout_constraintTop_toBottomOf="@+id/b" />

</androidx.constraintlayout.widget.ConstraintLayout>